[package]
name = "artificial-analysis-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI for querying AI model benchmarks, pricing, and performance from Artificial Analysis"
repository = "https://github.com/aneym/artificial-analysis-cli"
authors = ["Alex Neyman"]
keywords = ["ai", "llm", "benchmarks", "cli", "model-comparison"]
categories = ["command-line-utilities"]

[[bin]]
name = "aa"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
